Fixed tasks not attaching to projects and due dates not showing up. Need to re style tasks in order to properly display due date

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -146,16 +146,14 @@
     border-radius: 5px;
     margin-top: 12px;
     padding: 15px;
+    display: flex;
+    justify-content: space-between;
 }
 .onCheckbox{
     opacity: 0.5;
     text-decoration: line-through;
 }
-.task-content{
-    align-items: center;
-    display: flex;
-    justify-content: space-between;
-}
+
 .task-area{
     align-items: center;
     display: flex;
